--- a/index.html
+++ b/index.html
@@ -9,3 +9,13 @@
     <p>Hier finden Sie Informationen zu meinen Dienstleistungen im Bereich Prüfungsvorbereitung, SAP-Trainings und Webseitenberatung.</p>
 </body>
 </html>
+<nav>
+    <ul>
+        <li><a href="index.html">Homepage</a></li>
+        <li><a href="about.html">Über mich</a></li>
+        <li><a href="services.html">Leistungen</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
+        <li><a href="impressum.html">Impressum</a></li>
+        <li><a href="datenschutz.html">Datenschutzerklärung</a></li>
+    </ul>
+</nav>
